--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
 	
 
-	<section class="ftco-section" id="co-curriculars-section">
+	<section class="ftco-section" id="co-curricularssection">
 		<div class="container">
 		  <div class="row justify-content-center mb-5 pb-5">
 			<div class="col-md-7 heading-section text-center ftco-animate">
