--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
-			  <li class="nav-item"><a href="#cocurriculars-section" class="nav-link"><span>Co-curriculars</span></a></li>
-	          <li class="nav-item"><a href="#extracurriculars-section" class="nav-link"><span>Extra-curriculars</span></a></li>
+			  <li class="nav-item"><a href="#cocurricularssection" class="nav-link"><span>Co-curriculars</span></a></li>
+	          <li class="nav-item"><a href="#extracurricularssection" class="nav-link"><span>Extra-curriculars</span></a></li>
 			  <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -522,7 +522,7 @@
 	  </section>
 
 <!-- Extracurriculars Section -->
-<section class="ftco-section" id="extracurriculars-section">
+<section class="ftco-section" id="extracurricularssection">
 	<div class="container">
 	  <div class="row justify-content-center mb-5 pb-5">
 		<div class="col-md-7 heading-section text-center ftco-animate">
