--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Responsive Personalised Portfolio</a></h3>
-                <p>Designed a responsive personalised portfolio website using basic technologies.</p>
+                <p>Designed anpersonalised portfolio website using basic technologies.</p>
               </div>
             </div>
           </div>
@@ -470,7 +470,7 @@
 
 	
 
-	<section class="ftco-section" id="cocurricularssection">
+<section class="ftco-section" id="cocurricularssection">
 		<div class="container">
 		  <div class="row justify-content-center mb-5 pb-5">
 			<div class="col-md-7 heading-section text-center ftco-animate">
