--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Responsive Personalised Portfolio</a></h3>
+                <h3 class="heading"><a href=" https://aripilli-bhavana.github.io/aripillibhavana.github.io">Personalised Portfolio</a></h3>
                 <p>Designed anpersonalised portfolio website using basic technologies.</p>
               </div>
             </div>
