--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 									
 									<span>DATA STRUCTURES AND ALGORITHMS</span> <span class="pull-right">80%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+										<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									<span>ENTREPRENEURSHIP</span> <span class="pull-right">90%</span>
@@ -446,7 +446,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Database Inventory Management System </a></h3>
+                <h3 class="heading"><a>Database Inventory Management System </a></h3>
                 <p>Worked on the Database Inventory Management System to monitor the calibration state of an equipment under each division and developed functionalities to handle CRUD operations on
 					the data. </p>
               </div>
@@ -454,11 +454,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href=" https://aripilli-bhavana.github.io/aripillibhavana.github.io/" class="block-20 zoom-effect" style="background-image: url('images/PORTFOLIO\ PROJECT.png');">
+              <a class="block-20 zoom-effect" style="background-image: url('images/PORTFOLIO\ PROJECT.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href=" https://aripilli-bhavana.github.io/aripillibhavana.github.io">Personalised Portfolio</a></h3>
+                <h3 class="heading"><a>Personalised Portfolio</a></h3>
                 <p>Designed anpersonalised portfolio website using basic technologies.</p>
               </div>
             </div>
