--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
 									<span class="number">5</span><span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https:/www.linkedin.com/in/bhavana-aripilli" class="btn btn-blue primary py-3 px-4" style="background-color: #007bff; color: white;">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/bhavana-aripilli" class="btn btn-blue primary py-3 px-4" style="background-color: #007bff; color: white;">LinkedIn</a></p>
+
 							</div>
 						</div>
 					</div>
