--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p> <a href="images/ARIPILLI BHAVANA-RESUME.pdf" class="btn btn-primary py-4 px-5" target="_blank">View Resume</a></p>
+    				<p> <a href="https://github.com/Aripilli-Bhavana/personal-portfolio.github.io/blob/9aa9c68c4c3c2cd64f057550d25eb4f0f572f95c/images/ARIPILLI%20BHAVANA-RESUME.pdf" class="btn btn-primary py-4 px-5" target="_blank">View Resume</a></p>
     			</div>
     		</div>
     	</div>
