--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		
-				  <p><a href= "C:\Users\bhavana A\Downloads\ARIPILLI BHAVANA-RESUME.pdf" class="btn btn-primary py-4 px-5" target="_blank">Open Resume</a></p>
+				  <p><a href= "https://github.com/Aripilli-Bhavana/personal-portfolio.github.io/blob/9aa9c68c4c3c2cd64f057550d25eb4f0f572f95c/images/ARIPILLI%20BHAVANA-RESUME.pdf" class="btn btn-primary py-4 px-5" target="_blank">Open Resume</a></p>
 	          </div>
           </div>
 
