--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		
-				  <p><a href= "ARIPILLI BHAVANA.pdf" class="btn btn-primary py-4 px-5" target="_blank">Open Resume</a></p>
+				  <p><a href= "https://drive.google.com/file/d/1Awovm39WD5OySI6nGnrKd6qhaOr0Tgnm/view?usp=drivesdk" class="btn btn-primary py-4 px-5" target="_blank">Open Resume</a></p>
 	          </div>
           </div>
 
